W-15884079: Improve encapsulation of the Embedded Runtime (#1333)
(cherry picked from commit df0f5cbcaeeb10ce0189034391dd156eca5f8491)